--- a/PdfExtract/Components/_Imports.razor
+++ b/PdfExtract/Components/_Imports.razor
@@ -3,11 +3,10 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.FluentUI.AspNetCore.Components
 @using Icons = Microsoft.FluentUI.AspNetCore.Components.Icons
-
 @using Microsoft.JSInterop
 @using PdfExtract
-@using PdfExtract.Layout
+@using PdfExtract.Components
